--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crypto Rating</title>
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
-        {% load static %}
+    {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -38,8 +38,14 @@
                             {% csrf_token %}
                             <input class="button" type="text" placeholder="e.g. bitcoin" name="searched_crypto">
                         </form>
-{#                        <div class="hero-cta"><a class="button button-primary" href="#">Pre order now</a><a#}
-{#                                class="button" href="#">Get in touch</a></div>#}
+{#                        {% if messages %}#}
+{#                            <ul class="alert alert-danger" style="list-style: none;">#}
+{#                                {% for message in messages %}#}
+{#                                    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>#}
+{#                                {% endfor %}#}
+                                {#                        {{ messages.0 }}#}
+{#                            </ul>#}
+{#                        {% endif %}#}
                     </div>
                     <div class="hero-figure anime-element">
                         <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
@@ -60,92 +66,30 @@
             </div>
         </section>
 
-        <section class="features section">
-            <div class="container">
-                <div class="features-inner section-inner has-bottom-divider">
-                    <div class="features-wrap">
-                        {% for crypto in top_crypto %}
-                         <div class="feature text-center is-revealing">
-                            <div class="feature-inner">
-                                <div class="feature-icon">
-                                    <img src="dist/images/feature-icon-01.svg" alt="">
+            <section class="features section">
+                <div class="container">
+                    <div class="features-inner section-inner has-bottom-divider">
+                        <div class="features-wrap">
+                            {% for crypto in top_crypto %}
+                                <div class="feature text-center is-revealing">
+                                    <div class="feature-inner">
+                                        <div class="feature-icon">
+                                            <img src="dist/images/feature-icon-01.svg" alt="">
+                                        </div>
+                                        <h4 class="feature-title mt-24">{{ crypto.name }}</h4>
+                                        <p class="text-sm mb-0">Current SentimentScore: {{ crypto.score }}</p>
+                                    </div>
                                 </div>
-                                <h4 class="feature-title mt-24">{{ crypto.name }}</h4>
-                                <p class="text-sm mb-0">Current SentimentScore: {{ crypto.score }}</p>
-                            </div>
+                            {% endfor %}
                         </div>
-                        {% endfor %}
                     </div>
                 </div>
-            </div>
-        </section>
-
-{#        <section class="pricing section">#}
-{#            <div class="container-sm">#}
-{#                <div class="pricing-inner section-inner">#}
-{#                    <div class="pricing-header text-center">#}
-{#                        <h2 class="section-title mt-0">Unlimited for all</h2>#}
-{#                        <p class="section-paragraph mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed#}
-{#                            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut ad quis nostrud.</p>#}
-{#                    </div>#}
-{#                    <div class="pricing-tables-wrap">#}
-{#                        <div class="pricing-table">#}
-{#                            <div class="pricing-table-inner is-revealing">#}
-{#                                <div class="pricing-table-main">#}
-{#                                    <div class="pricing-table-header pb-24">#}
-{#                                        <div class="pricing-table-price"><span#}
-{#                                                class="pricing-table-price-currency h2">$</span><span#}
-{#                                                class="pricing-table-price-amount h1">49</span><span class="text-xs">/month</span>#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                    <div class="pricing-table-features-title text-xs pt-24 pb-24">What you will get#}
-{#                                    </div>#}
-{#                                    <ul class="pricing-table-features list-reset text-xs">#}
-{#                                        <li>#}
-{#                                            <span>Lorem ipsum dolor sit nisi</span>#}
-{#                                        </li>#}
-{#                                        <li>#}
-{#                                            <span>Lorem ipsum dolor sit nisi</span>#}
-{#                                        </li>#}
-{#                                        <li>#}
-{#                                            <span>Lorem ipsum dolor sit nisi</span>#}
-{#                                        </li>#}
-{#                                        <li>#}
-{#                                            <span>Lorem ipsum dolor sit nisi</span>#}
-{#                                        </li>#}
-{#                                    </ul>#}
-{#                                </div>#}
-{#                                <div class="pricing-table-cta mb-8">#}
-{#                                    <a class="button button-primary button-shadow button-block" href="#">Pre order#}
-{#                                        now</a>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </section>#}
-
-{#        <section class="cta section">#}
-{#            <div class="container">#}
-{#                <div class="cta-inner section-inner">#}
-{#                    <h3 class="section-title mt-0">Still not convinced on buying?</h3>#}
-{#                    <div class="cta-cta">#}
-{#                        <a class="button button-primary button-wide-mobile" href="#">Get in touch</a>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </section>#}
+            </section>
     </main>
 
     <footer class="site-footer">
         <div class="container">
             <div class="site-footer-inner">
-                <div class="brand footer-brand">
-                    <a href="#">
-                        <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
-                    </a>
-                </div>
                 <ul class="footer-links list-reset">
                     <li>
                         <a href="#">Contact</a>
@@ -189,7 +133,6 @@
                         </a>
                     </li>
                 </ul>
-                <div class="footer-copyright">&copy; 2019 Solid, all rights reserved</div>
             </div>
         </div>
     </footer>
